<?xml version="1.0"?>
<package format="3">
  <name>hybrid_a_star_ros2</name>
  <version>0.0.1</version>
  <description>Hybrid A* path planner with visualization</description>

  <maintainer email="you@email.com">your_name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>

</package>
